# ferristatus

./: Cargo.toml  README.org  config.json  shell.nix  upd.org
examples/: config.json5  config.new.yaml  config.new.yml  config.ron  config.yaml  config.yml
src/: args.rs  components.rs  config.rs  errors.rs  lib.rs  main.rs  signals.rs  utils.rs
src.old/: components.rs  config.rs  main.rs  utils.rs
src.old/components/: backlight.rs  battery.rs
src.old/components/backlight/: settings.rs  state.rs
src.old/components/battery/: state.rs
src/components/: alsa.rs  backlight.rs  battery.rs  command.rs  component_list.rs  component_utils.rs  components.rs  core.rs  mod.rs  text.rs  time.rs  utils.rs
src/components/alsa/: core.rs  mod.rs
src/components/backlight/: core.rs  mod.rs  settings.rs  state.rs
src/components/battery/: battery.rs  core.rs  format.rs  mod.rs  settings.rs
src/components/time/: core.rs  time.rs
tests/: config.json  integration_tests.rs
tests/configs/: config_1.yml
