[package]
name = "ferristatus"
version = "0.1.0"
edition = "2024"

[dependencies]
acpi_client = { git = "https://github.com/lispcat/acpi_client.git" }
alsa_lib = { package = "alsa", version = "0.9.1" }
anyhow = "1.0.97"
chrono = "0.4.40"
clap = { version = "4.5.34", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
] }
humantime = "2.2.0" # use format_duration(duration).to_string() for 1h 33m
libc = "0.2.171"
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
signal-hook = "0.3.17"
smart-default = "0.7.1"
