[package]
name = "ferristatus"
version = "0.1.0"
edition = "2024"

[dependencies]
acpi_client = { git = "https://github.com/lispcat/acpi_client.git" }
alsa_lib = { package = "alsa", version = "0.9.1" }
anyhow = "1.0.97"
chrono = "0.4.40"
clap = { version = "4.5.34", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
] }
env_logger = "0.11.8"
# delegate = "0.13.3"
humantime = "2.2.0" # use format_duration(duration).to_string() for 1h 33m
itertools = "0.14.0"
libc = "0.2.172"
log = "0.4.27"
once_cell = "1.21.3"
pidfile2 = "0.1.1"
rand = "0.9.1"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
signal-hook = "0.3.17"
smart-default = "0.7.1"
strfmt = "0.2.4"
